# gauntlet

./: .env.example  .gitignore  README.md  pyproject.toml
src/blackheart_ingest/: __init__.py
src/blackheart_ingest/features/: __init__.py  compute.py  definitions.py  persistence.py
src/blackheart_ingest/inference/: __init__.py  api.py  artifacts.py  persist.py  registry.py
src/blackheart_ingest/shared/: base.py  db.py  logging_setup.py  pit_guards.py  settings.py
src/blackheart_ingest/sources/: alternative_me.py  binance_macro.py  coingecko.py  coinmetrics.py  defillama.py  forexfactory.py  fred.py
src/blackheart_ingest/workers/: compute_features.py  inference_backfill.py  server.py
tests/: test_features_compute.py  test_inference.py  test_train_ingest_equivalence.py
